# moving-sofa-problem

./: CMakeLists.txt  LICENSE  Readme.txt  a_sofa.cpp  b_sofa.cpp  intersecto.h
